@@ -2,6 +2,9 @@ uint8_t TEMPLATE_FUNC_NAME (void* Buffer, uint16_t Length)
 {
 	uint8_t* DataStream = ((uint8_t*)Buffer + TEMPLATE_BUFFER_OFFSET(Length));
 	
+	if (!(Length))
+	  Endpoint_ClearOUT();
+	
 	while (Length)
 	{
 		if (Endpoint_IsSETUPReceived())
